matching created image path

--- a/roles/backend-deployment/tasks/main.yml
+++ b/roles/backend-deployment/tasks/main.yml
@@ -3,7 +3,22 @@
   docker_image:
     name: brianbwire/brian-yolo-backend:v1.0.0
     source: pull
+---
+- name: Pull image from repository
+  docker_image:
+    name: myronkorir/yolo-backend:v1.0.1
+    source: pull
 
+- name: Create Node.js Backend Container
+  docker_container:
+    name: yolo-backend
+    image: myronkorir/yolo-backend:v1.0.1
+    networks:
+      - name: app-net
+    ports:
+      - "5000:5000"
+    command: "npm start"
+  become: yes
 - name: Create Node.js Backend Container
   docker_container:
     name: brian-yolo-backend
