Adding nginx to docker file and changimg port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,33 @@
-#This file builds the Docker images for a React/NodeJS application and runs it as microservices on Docker containers
-
-#To ensure successful execution, clone this entire repository and execute this file while in the root folder of the cloned repository
-
-#It's also a requirement to have Docker and the docker-compose plugin installed in your environment
-
-#To launch this app without having to clone the entire repository,use the docker-compose.yaml file to run the app
-
-version: "3.8"
 
 services:
 
   #Builds the frontend Docker image and creates the frontend microservice
-  brian-yolo-client:
-    image: brianbwire/brian-yolo-client:v1.0.0
+  yolo-frontend:
+    image: myronkip/yolo-frontend:v1.0.4
     build: ./client
-    container_name: brian-yolo-client
-    stdin_open: true
-    tty: true
+    container_name: yolo-frontend 
     ports:
-      - "3000:3000"
+      - "80:80"
     depends_on: 
-      - brian-yolo-backend
+      - yolo-backend
     networks:
       - app-net
 
   #Builds the backend Docker image and creates the backend microservice
-  brian-yolo-backend:
-    image: brianbwire/brian-yolo-backend:v1.0.0
+  yolo-backend:
+    image: myronkip/yolo-backend:v1.0.3
     build: ./backend
-    container_name: brian-yolo-backend
-    stdin_open: true
-    tty: true
+    container_name: yolo-backend 
     restart: always
     ports:
       - "5000:5000"
     depends_on: 
-      - app-ip-mongo
+      - mongo
     networks:
       - app-net
 
   #Creates the database microservice
-  app-ip-mongo:
+  mongo:
     image: mongo
     container_name: app-mongo
     ports:
