--- a/roles/backend-deployment/tasks/main.yml
+++ b/roles/backend-deployment/tasks/main.yml
@@ -6,13 +6,13 @@
 ---
 - name: Pull image from repository
   docker_image:
-    name: myronkorir/yolo-backend:v1.0.1
+    name: myronkip/yolo-backend:v1.0.1
     source: pull
 
 - name: Create Node.js Backend Container
   docker_container:
     name: yolo-backend
-    image: myronkorir/yolo-backend:v1.0.1
+    image: myronkip/yolo-backend:v1.0.1
     networks:
       - name: app-net
     ports:
